fix: adjust background to stretch if form is bigger than page

--- a/src/data-workspace/data-workspace.module.css
+++ b/src/data-workspace/data-workspace.module.css
@@ -21,6 +21,7 @@
     min-inline-size: 600px;
     padding: 8px;
     background-color: #fff;
+    inline-size: max-content;
 }
 
 .footer {
