--- a/src/data-workspace/section-form/section.module.css
+++ b/src/data-workspace/section-form/section.module.css
@@ -159,7 +159,7 @@
     display: flex;
     gap: 6px;
     flex-direction: column;
-    width: 100%;
+    inline-size: 100%;
 }
 
 .verticalSectionTabWrapper {
